<resources>
    <string name="no_info">Chưa bổ sung thông tin</string>
    <string name="app_name">DOANCN</string>
    <string name="Male">Nam</string>
    <string name="Female">Nữ</string>
    <string name="Orther">Khác</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="previous">&lt;-</string>
    <string name="next">-&gt;</string>
    <string name="quenmatkhau">Quên mật khẩu?</string>
    <string name="tkoremail">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="remember">Lưu mật khẩu</string>
    <string name="containheader">Chào mừng bạn trở lại</string>
    <string name="sigup">Đăng ký</string>
    <string name="youare">Bạn là ?</string>
    <string name="teacher">Giáo viên</string>
    <string name="student">Học sinh</string>
    <string name="next2">Tiếp theo</string>
    <string name="back">Quay lại</string>
    <string name="yourname">Tên của bạn</string>
    <string name="phonenumber">Số điện thoại</string>
    <string name="educationLevel">Trình độ học vấn</string>
    <string name="currentWorkPlace">Nơi làm việc hiện tại</string>
    <string name="dateborn">Ngày sinh</string>
    <string name="gender">Giới tính</string>
    <string name="search">Tìm kiếm khóa học</string>
    <string name="enrolled">Đã đăng ký</string>
    <string name="finishsigup">Đăng ký hoàn tất. Xin hãy click vào đường link đã được gửi đến email của bạn (bạn có 15 phút để xác thực tài khoản đăng ký)</string>
    <string name="baseoncity">Địa chỉ hiện tại:\u0020</string>
    <string name="noclassroom">Opps!! Không tìm thấy lớp học nào</string>
    <string name="noclasstoday">Hôm nay không có lớp học nào</string>
    <string name="nostudentinclass">Không có học sinh nào trong lớp</string>
    <string name="noparent">Chưa thêm thông tin phụ huynh</string>
    <string name="parenttitle">THÔNG TIN PHỤ HUYNH</string>
    <string name="addparent">Thêm phụ huynh</string>
    <string name="changeinfo">Thay đổi \nthông tin</string>
    <string name="parent">Phụ huynh</string>
    <string name="changepass">Đổi mật khẩu</string>
    <string name="Email">Email</string>
    <string name="dob">Ngày sinh</string>
    <string name="crwp">Nơi học tập hiện tại</string>
    <string name="ecl">Trình độ học vấn</string>
    <string name="notPay">Chưa đóng tiền</string>
    <string name="paid">Đã đóng tiền</string>
    <string name="PAYMENTHISTORY">LỊCH SỬ ĐÓNG TIỀN</string>
    <string name="paymenthistory">Lịch sử đóng tiền</string>
    <string name="paydate">Ngày đóng tiền tiếp theo</string>
    <string name="paiddate">Ngày đóng tiền</string>
    <string name="pay">Đóng tiền</string>
    <string name="amount">Số tiền</string>
    <string name="total">Tổng:</string>
    <string name="totalamoun">imageteacher</string>
    <string name="cancelicon">X</string>
    <string name="ATTENDANCEDSTUDENTS">DANH SÁCH ĐIỂM DANH</string>
    <string name="numberofmissingstudents">Vắng</string>
    <string name="imageteacher">imageteacher</string>
    <string name="numberattendance">Số người đăng ký</string>
    <string name="startday">Ngày bắt đầu</string>
    <string name="studyday">Ngày học</string>
    <string name="starttime">Thời gian học</string>
    <string name="subject">Môn học</string>
    <string name="fee">Phí</string>
    <string name="address">Địa chỉ</string>
    <string name="info">Thông tin lớp học</string>
    <string name="about">Giới thiệu</string>
    <string name="about2">Mô tả lớp học</string>
    <string name="enrollmentnow">Đăng ký Ngay</string>
    <string name="name">Tên lớp học</string>
    <string name="short_description">Mô tả ngắn về lớp học</string>
    <string name="subject_name">Môn học giảng dạy</string>
    <string name="pick_date">Chọn ngày</string>
    <string name="date_start">Ngày bắt đầu</string>
    <string name="tv_pickDate">Chọn buổi trong tuần:(chọn ít nhất một buổi)</string>
    <string name="pick_time">Chọn giờ</string>
    <string name="time_start">Thời gian bắt đầu</string>
    <string name="duration">Độ dài tiết học</string>
    <string name="payment_option">Kiểu thanh toán</string>
    <string name="hint_location">Ghim địa chỉ trên bản đồ:</string>
    <string name="adđ_new">Tạo mới</string>
    <string name="enteremail">Nhập email của bạn ở dưới đây</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="formatted_time">%02d:%02d</string>
    <string name="qrcode_expired_title">QR code đã hết hạn</string>
    <string name="qrcode_expired_msg">Bạn có muốn tạo mới điểm danh?</string>
    <string name="qrcode_expired_yes">Tạo mới</string>
    <string name="qrcode_expired_no">Hủy</string>
    <string name="entercode">Nhập mã 6 số vừa được gửi đến email của bạn</string>
    <string name="sended_password_title">Lấy lại mật khẩu thành công</string>
    <string name="sended_password_body">Mật khẩu mới đã được gửi đến email của bạn</string>

    <string-array name="gender_select">
        <item>Nam</item>
        <item>Nữ</item>
        <item>Khác</item>
    </string-array>
    <string-array name="gender_post">
        <item>MALE</item>
        <item>FEMALE</item>
        <item>OTHER</item>
    </string-array>
    <string-array name="Subjects">
        <item>Toán</item>
        <item>Lý</item>
        <item>Văn</item>
        <item>Ngoại Ngữ</item>
        <item>Sinh Học</item>
        <item>Hóa Học</item>
        <item>Triết Học</item>
        <item>Công Nghệ Thông Tin</item>
        <item>Khác</item>
    </string-array>
    <string-array name="Dow">
        <item>MONDAY</item>
        <item>TUESDAY</item>
        <item>WEDNESDAY</item>
        <item>THURSDAY</item>
        <item>FRIDAY</item>
        <item>SATURDAY</item>
        <item>SUNDAY</item>
    </string-array>
    <string-array name="option">
        <item>Tuần</item>
        <item>Tháng</item>
        <item>Qúy</item>
        <item>Năm</item>
        <item>Trả trước</item>
        <item>Miễn phí</item>
        <item>khác</item>
    </string-array>
    <string-array name="enrollment_subjects">
        <item>Tất cả</item>
        <item>Toán</item>
        <item>Lý</item>
        <item>Văn</item>
        <item>Ngoại Ngữ</item>
        <item>Sinh Học</item>
        <item>Hóa Học</item>
        <item>Triết Học</item>
        <item>Công Nghệ Thông Tin</item>
        <item>Khác</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="fab_content_desc">Vị trí của tôi</string>
    <string name="confirm">Xác nhận</string>
    <string name="supporting_text">Vui lòng ghim vị trí lớp học trên bản đồ</string>
    <string name="go_to_map">Tiến hành ngay</string>
    <string name="supporting_text2">Vui lòng điền đủ thông tin ở các phần dưới đây:</string>
    <string name="supporting_text3">Vui lòng kiểm tra lại thông tin phía trên</string>

    <string-array name="update_gender">
        <item>Nam</item>
        <item>Nữ</item>
        <item>Khác</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="safe_section">An toàn ( tỉ lệ nghỉ học dưới 10% )</string>
    <string name="warning_section">cảnh báo ( tỉ lệ nghỉ học từ 10%-30% )</string>
    <string name="dangerous_section">Báo động! ( tỉ lệ nghỉ học từ 50%- 100% )</string>
    <string name="title_activity_class">ClassActivity</string>
    <string name="title_home">Bản tin</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_people">Mọi người</string>
    <string name="title_homework">Bài tập</string>

    <string name="i_m_danh">Điểm danh</string>
    <string name="setting">Cài Đặt</string>
    <string name="agree">Đồng ý</string>
    <string name="disagree">Hủy bỏ</string>
    <string name="update">Cập nhật</string>
    <string name="backToClass">Trở về lớp học</string>

    <string name="newhomework">Tạo mới bài tập</string>
    <string name="deadline">Chọn thời hạn</string>
    <string name="choose_file">Chọn file</string>
    <string name="yoursubmission">Bài tập về nhà của bạn</string>
    <string name="cancel_submit">Hủy gửi</string>
    <string name="pls_wait">Xin chờ</string>
    <string name="downloading">Đang tải</string>
    <string name="download">tải về</string>
    <string name="shifts">Buổi học trong tuần</string>
    <string name="accept">Chấp nhận</string>
    <string name="denied">Từ chối</string>
    <string name="tittle_enrollment">Danh sách yêu cầu tham gia</string>
    <string name="dumb_text">test</string>
    <string name="NewAnnouncement">Tạo thông báo mới</string>


</resources>

