<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_people"
        android:icon="@drawable/ic_baseline_people_24"
        app:showAsAction="ifRoom"
        android:title="@string/title_people" />

    <item
        android:id="@+id/navigation_homework"
        android:icon="@drawable/ic_baseline_library_books_24"
        app:showAsAction="ifRoom"
        android:title="@string/title_homework" />

    <item
        android:id="@+id/navigation_bottom_sheet"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"
        android:title="@string/setting" />

</menu>