<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/cancel_payment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/cancelicon"
        android:textColor="@color/red"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/PAYMENTHISTORY"
            android:textAlignment="center"
            android:textColor="@color/headings"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow tools:ignore="UselessParent">
                <TextView
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="@string/paiddate"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:gravity="center"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/amount"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>

        <ListView
            android:id="@+id/list_payment_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            tools:listitem="@layout/item_payment_history" />
    </LinearLayout>

</RelativeLayout>