<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.Profile.ParentFragment">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parenttitle"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="#005ecb"/>

        <TextView
            android:id="@+id/add_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/background_add_parent"
            android:text="@string/addparent"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/process_parent"
        android:indeterminate="true"
        android:layout_marginTop="10dp"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/primaryColor"
        android:progressDrawable="@color/primaryColor"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        />



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
        </ScrollView>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/noParents"
        android:visibility="gone"
        android:text="@string/noparent"
        android:layout_gravity="center" />
</LinearLayout>