<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginStart="3dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"

        android:layout_height="wrap_content">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="10dp"
            android:layout_gravity="center"
            android:src="@drawable/bg_safe_section"
            android:layout_marginEnd="5dp"
            android:layout_height="10dp"/>
        <TextView
            android:text="@string/safe_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="10dp"
            android:layout_gravity="center"
            android:src="@drawable/bg_warning_section"
            android:layout_marginEnd="5dp"
            android:layout_height="10dp"/>
        <TextView
            android:text="@string/warning_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="10dp"
            android:layout_gravity="center"
            android:src="@drawable/bg_dangerous_section"
            android:layout_marginEnd="5dp"
            android:layout_height="10dp"/>
        <TextView
            android:text="@string/dangerous_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:backgroundTint="@color/black"
        android:layout_height="1dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcview"
        android:layout_width="match_parent"
        tools:listitem="@layout/section_item"
        android:layout_height="wrap_content"/>
</LinearLayout>